<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Intestazione fissa -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/headerBackground"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:src="@drawable/mercedes"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:text="Fuel"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@id/imageLogo"
            app:layout_constraintStart_toStartOf="@id/imageLogo"/>

        <Button
            android:id="@+id/saveButton"
            style="@style/CustomButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="96dp"
            android:background="@drawable/ripple_button"
            android:clickable="true"
            android:focusable="true"
            android:text="Save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/archiveButton"
            style="@style/CustomButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/ripple_button"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/archiveButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 📜 ScrollView con contenuto -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <!-- textView and editText for date -->

        <!-- Campo data -->
        <TextView
            android:id="@+id/textView_date"
            style="@style/CustomTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="0dp"
            android:text="@string/textView_date"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_date"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:inputType="date"
            android:hint="gg/mm/aaaa"
            android:textColor="@color/black"
            style="@style/CustomEditTextStyle"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/textView_date"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"/>


        <!-- 📐 Guideline per layout tabellare -->

        <ImageButton
            android:id="@+id/buttonHideKeyboard"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="116dp"
            android:background="@drawable/ripple_keyboard"
            android:clickable="true"
            android:contentDescription="Chiudi Tastiera"
            android:focusable="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_keyboard_hide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_supply_cost" />

        <ImageButton
            android:id="@+id/cost_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ripple_keyboard"
            android:clickable="true"
            android:contentDescription="Chiudi Tastiera"
            android:focusable="true"
            android:onClick="fuelCostCalculate"
            android:scaleType="centerInside"
            android:src="@drawable/ic_calculator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_speed" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.46" />

        <!-- Tipo carburante  RadioGroup-->
        <TextView
            android:id="@+id/textView_fuel_type"
            style="@style/CustomTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/textView_fuel_type"
            app:layout_constraintTop_toBottomOf="@id/editText_date"
            android:layout_marginTop="8dp"/>

        <RadioGroup
            android:id="@+id/radioGroupFuelType"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="@id/textView_fuel_type"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            android:layout_marginStart="8dp">

            <RadioButton
                android:id="@+id/radioButtonDiesel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Diesel" />

            <RadioButton
                android:id="@+id/radioButtonGasoline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Benzina"
                android:layout_marginStart="16dp" />
        </RadioGroup>

        <!-- Gruppo Rifornimento -->

        <TextView
            android:id="@+id/textView_cost_liter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_cost_liter"
            style="@style/CustomTextViewStyle"
            app:layout_constraintTop_toBottomOf="@id/radioGroupFuelType"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/editText_cost_liter"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:inputType="numberDecimal"
            style="@style/CustomEditTextStyle"
            app:layout_constraintTop_toTopOf="@id/textView_cost_liter"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/textView_supply_cost"
            style="@style/CustomTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/textView_supply_cost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_cost_liter" />

        <EditText
            android:id="@+id/editText_supply_cost"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:inputType="numberDecimal"
            style="@style/CustomEditTextStyle"
            app:layout_constraintTop_toTopOf="@id/textView_supply_cost"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            android:layout_marginStart="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <TextView
            android:id="@+id/textView_supply_liters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_supply_liters"
            style="@style/CustomTextViewStyle"
            app:layout_constraintTop_toBottomOf="@id/editText_supply_cost"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/editText_supply_liters"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:inputType="numberDecimal"
            style="@style/CustomEditTextStyle"
            app:layout_constraintTop_toTopOf="@id/textView_supply_liters"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/textView_km_autonomy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_km_autonomy"
            style="@style/CustomTextViewStyle"
            app:layout_constraintTop_toBottomOf="@id/editText_supply_liters"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/editText_km_autonomy"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:inputType="numberDecimal"
            style="@style/CustomEditTextStyle"
            app:layout_constraintTop_toTopOf="@id/textView_km_autonomy"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/textView_km_tachometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_km_tachometer"
            style="@style/CustomTextViewStyle"
            app:layout_constraintTop_toBottomOf="@id/editText_km_autonomy"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/editText_km_tachometer"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:inputType="numberDecimal"
            style="@style/CustomEditTextStyle1"
            app:layout_constraintTop_toTopOf="@id/textView_km_tachometer"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/textView_km_done"
            style="@style/CustomTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/textView_km_done"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_km_tachometer" />

        <EditText
            android:id="@+id/editText_km_done"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:inputType="numberDecimal"
            style="@style/CustomEditTextStyle1"
            app:layout_constraintTop_toTopOf="@id/textView_km_done"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/textView_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_time"
            style="@style/CustomTextViewStyle"
            app:layout_constraintTop_toBottomOf="@id/editText_km_done"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/editText_time"
            style="@style/CustomEditTextStyle1"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toTopOf="@id/textView_time" />

        <TextView
            android:id="@+id/textView_liters_100km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_liters_100km"
            style="@style/CustomTextViewStyle"
            app:layout_constraintTop_toBottomOf="@id/editText_time"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/editText_liters_100km"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:inputType="numberDecimal"
            style="@style/CustomEditTextStyle1"
            app:layout_constraintTop_toTopOf="@id/textView_liters_100km"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/textView_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_speed"
            style="@style/CustomTextViewStyle"
            app:layout_constraintTop_toBottomOf="@id/editText_liters_100km"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/editText_speed"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:inputType="numberDecimal"
            style="@style/CustomEditTextStyle1"
            app:layout_constraintTop_toTopOf="@id/textView_speed"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/textView_km_liter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_km_liter"
            style="@style/CustomTextViewStyle"
            app:layout_constraintTop_toBottomOf="@id/editText_speed"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/editText_km_liter"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:inputType="numberDecimal"
            style="@style/CustomEditTextStyle2"
            app:layout_constraintTop_toTopOf="@id/textView_km_liter"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/textView_cost_km_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_cost_km_done"
            style="@style/CustomTextViewStyle"
            app:layout_constraintTop_toBottomOf="@id/editText_km_liter"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/editText_cost_km_done"
            style="@style/CustomEditTextStyle2"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toTopOf="@id/textView_cost_km_done"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            android:layout_marginStart="8dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textInputLayout_note"
            style="@style/CustomTextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/editText_cost_km_done"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_note"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:lineSpacingExtra="2dp"
                android:textSize="15sp"
                android:typeface="sans" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:typeface="sans"
            android:text="@string/version"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_note"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="1dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>